# demos

./: .appveyor.yml  CMakeLists.txt  README.md
chimera_pe/: README.md
chimera_pe/src/: CMakeLists.txt  createproc.h  inject_pe.h  load_imports.h  main.cpp  pe_hdrs_helper.cpp  pe_raw_to_virtual.h  relocate.h  sysutil.cpp  target_util.h
chimera_pe_payload_template/: README.md
chimera_pe_payload_template/src/: CMakeLists.txt  main.cpp  start_actions.cpp  start_actions.h  test.h
chimera_pe_payload_template/src/reflective/: exports_lookup.h  pe_hdrs_helper.cpp  peb_lookup.h  reflective_imports_load.h
dll_injection/: README.md
dll_injection/src/: CMakeLists.txt  enumproc.h  inject_with_loadlibrary.h  main.cpp  map_buffer_into_process.h  ntddk.h  resource.rc  run.bat  sysutil.cpp  target_util.h
functions_loader/: README.md
functions_loader/src/: CMakeLists.txt  exports_lookup.h  main.cpp  pe_hdrs_helper.cpp  peb_lookup.h  test.h  usage_demo.h
inject_shellcode/: README.md
inject_shellcode/src/: CMakeLists.txt  add_apc.h  add_thread.h  createproc.h  enumproc.h  kernel32_undoc.h  main.cpp  main.h  map_buffer_into_process.h  ntddk.h  ntdll_undoc.h  patch_context.h  patch_ep.h  payload.h  sysutil.cpp  target_util.h  window_long_inject.cpp  window_long_inject.h
run_pe/: README.md
run_pe/src/: CMakeLists.txt  createproc.h  main.cpp  ntdll_undoc.h  pe_hdrs_helper.h  pe_raw_to_virtual.h  relocate.h  resource.h  run.bat  run_pe.h  runpe.h  sysutil.h  target_util.h
